# data-detective

./: .gitignore  404.html  CNAME  CONTRIBUTING.md  README.md  index.html  lunr-index-1637231206314.json  lunr-index-1637231520644.json  lunr-index-1637232989248.json  lunr-index-1637665406761.json  lunr-index-1637839417267.json  lunr-index-1637926941012.json  lunr-index-1638207917978.json  lunr-index-1638361931754.json  lunr-index-1638798814982.json  lunr-index-1638963703561.json  lunr-index-1639132868144.json  lunr-index-1640778788114.json  lunr-index-1642432856819.json  lunr-index-1652947650067.json  lunr-index-1653641678759.json  lunr-index.json  search-doc-1637231520644.json  search-doc-1637232989248.json  search-doc-1637665406761.json  search-doc-1637839417267.json  search-doc-1637926941012.json  search-doc-1638207917978.json  search-doc-1638361931754.json  search-doc-1638798814982.json  search-doc-1638963703561.json  search-doc-1639132868144.json  search-doc-1640778788114.json  search-doc-1642432856819.json  search-doc-1652947650067.json  search-doc-1653641678759.json  search-doc.json  sitemap.xml
data-detective-airflow/: .env.example  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.CeleryExecutor.yml  docker-compose.tests.yml  docker-compose.yml  pydoc-markdown.yml  pyproject.toml
data-detective-airflow/dags/: dag_generator.py
data-detective-airflow/dags/dags/dummy/: meta.yaml
data-detective-airflow/dags/dags/dummy_all_wrk_type/: meta.yaml
data-detective-airflow/dags/dags/dummy_elt_etl/: meta.yaml
data-detective-airflow/dags/dags/dummy_petl/: meta.yaml
data-detective-airflow/dags/dags/dummy_processed/: meta.yaml
data-detective-airflow/dags/dags/dummy_python/: meta.yaml
data-detective-airflow/dags/dags/dummy_s3/: meta.yaml
data-detective-airflow/dags/dags/dummy_s3_large/: meta.yaml
data-detective-airflow/dags/dags/dummy_sftp/: meta.yaml
data-detective-airflow/dags/dags/dummy_sql/: meta.yaml
data-detective-airflow/data_detecitve_airflow/: constants.py
data-detective-airflow/data_detecitve_airflow/dag_generator/: __init__.py
data-detective-airflow/data_detecitve_airflow/dag_generator/results/: __init__.py  pickle_result.py
data-detective-airflow/data_detective_airflow/: constants.py
data-detective-airflow/data_detective_airflow/dag_generator/: __init__.py  generator.py
data-detective-airflow/data_detective_airflow/operators/: __init__.py  tbaseoperator.py
data-detective-airflow/data_detective_airflow/test_utilities/: __init__.py  airflow.py  context.py  datasets.py  generate.py  generate_df.py  test_helper.py  test_utils_petl.py
data-detective-airflow/data_detective_airflow/utils/: logging_thread.py  notnull.py
data-detective-airflow/docker/: entrypoint.sh  init-connections.sh  init-pg.sql  init-s3.sh
data-detective-airflow/mg_airflow/dag_generator/: generator.py
data-detective-airflow/mg_airflow/operators/: __init__.py  tbaseoperator.py
data-detective-airflow/mg_airflow/test_utilities/: assertions.py
data-detective-airflow/tests/: conftest.py
data-detective-airflow/tests/dag_generator/: test_generator.py  test_tdag.py
data-detective-airflow/tests/dags/: test_dummy.py  test_dummy_all_wrk_type.py  test_dummy_elt_etl.py  test_dummy_manual.py  test_dummy_petl.py  test_dummy_processed.py  test_dummy_python.py  test_dummy_s3.py  test_dummy_s3_large.py  test_dummy_sftp.py  test_dummy_sql.py
data-detective-airflow/tests/operators/: test_tbaseoperator.py
data-detective-airflow/tests_data/dags/: dummy_all_wrk_type_dataset.py  dummy_python_dataset.py  dummy_s3_dataset.py  dummy_sftp_dataset.py
data-detective-etl/: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dockerhub  Makefile  README.md  docker-compose.CeleryExecutor.yml  docker-compose.elastic.yml  docker-compose.linter.yml  docker-compose.tests.yml  docker-compose.yml  pydoc-markdown.yml  pyproject.toml  tox.ini
data-detective-etl/common/: constants.py  root_tree_generator.py  urn.py  utils.py
data-detective-etl/common/builders/: __init__.py  code_builder.py  html_info_builder.py  json_system_builder.py  link_builder.py  notification_builder.py  table_info_builder.py
data-detective-etl/common/utilities/: entity_enums.py  search_enums.py
data-detective-etl/dags/: .airflowignore  dag_generator.py
data-detective-etl/docker/: entrypoint.linter.sh  entrypoint.sh  entrypoint.tests.sh  generate_dags_graph.sh  init-connections.sh  init-pg.sql  init-pools.md  init-s3.sh
data-detective-etl/tests/: conftest.py
data-detective-etl/tests/dags/: test_dd_load_basic_card.py  test_dd_load_dds_dag.py  test_dd_load_dds_pg.py  test_dd_load_dds_root.py  test_dd_load_elastic_search.py  test_dd_load_tuning_breadcrumb.py  test_dd_load_tuning_dictionary.py  test_dd_load_tuning_messages.py  test_dd_load_tuning_relations_type.py  test_dd_load_tuning_search_help.py  test_dd_load_tuning_search_system_x_type.py  test_dd_system_remove_works.py
mg-airflow/: .editorconfig  .gitignore  Dockerfile  README.MD  docker-compose.CeleryExecutor.yml  docker-compose.tests.yml  docker-compose.yml  pyproject.toml  setup.cfg  tox.ini
mg-airflow/dags/dags/dummy/: meta.yaml
mg-airflow/docker/: init-connections.sh  init-pgwork.sql  init-s3work.sh
mg-airflow/docker/ssh_service/: Dockerfile
mg-airflow/docs/: comparison.md  concepts.md  datasets.md  development.md  factories.md  operators.md  production.md  testing.md
mg-airflow/mg_airflow/: definitions.py
mg-airflow/mg_airflow/dag_generator/: generator.py
mg-airflow/mg_airflow/operators/: __init__.py  tbaseoperator.py
mg-airflow/mg_airflow/test_utilities/: __init__.py  assertions.py  generate.py  generate_df.py  test_helper.py  test_utils_petl.py
mg-airflow/mg_airflow/utils/: logging_thread.py  notnull.py  petl_utils.py
mg-airflow/tests/: conftest.py
mg-airflow/tests/dag_generator/: test_generator.py
mg-airflow/tests/dags/: test_dummy.py  test_dummy_processed.py  test_dummy_sql.py
mg-airflow/tests/operators/: test_tbaseoperator.py
mg-airflow/tests_data/dags/: dummy_etl_elt_dataset.py
(+1011 files in other folders)
