[tool.poetry]
name = "date-detective-etl"
license = "Apache-2.0"
version = "2.0.0"
description = "ETL with data-detective-airflow"
authors = ["Tinkoff Data Detective Team"]

[tool.poetry.dependencies]
python = "^3.9"
apache-airflow = "~2.2"
apache-airflow-providers-amazon = "*"
apache-airflow-providers-celery = "*"
apache-airflow-providers-postgres = "*"
apache-airflow-providers-redis = "*"
apache-airflow-providers-ssh = "*"
apache-airflow-providers-elasticsearch = "*"
data-detective-airflow = "2.0.0"
petl = "^1.7"
# Not all airflow providers support pandas > 1.4.0
pandas = "^1.1, <1.4"
psycopg2-binary = "^2.9"
beautifulsoup4 = "^4.10"
html5lib = "*"
xmljson = "0.2.1"
pydantic = "^1.9"
lxml = "^4.7"
# conflict with flask_appbuilder, need < 3.x
wtforms = "^2.3.0"

[tool.poetry.dev-dependencies]
factory-boy = "*"
isort = {version = "*",extras = ["pyproject"]}
mypy = "0.790"
pycodestyle = "2.5.0"
pep8-naming = "*"
pylint = "2.5.2"
pytest = "*"
pytest-cov = "*"
pytest-deadfixtures = "*"
pytest-mock = "*"
responses = "*"
types-freezegun = "*"
types-pytz = "*"
types-PyYAML = "*"
types-paramiko = "*"
types-requests = "*"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.isort]
profile = "hug"
line_length = 120
src_paths = [
    "dags",
    "common",
]
multi_line_output = 4


[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
