[tool.poetry]
name = "date-detective-etl"
license = "Apache-2.0"
version = "2.1.0"
description = "ETL with data-detective-airflow"
authors = ["Tinkoff Data Detective Team"]

[tool.poetry.dependencies]
python = "^3.9"
apache-airflow = "~2.4"
apache-airflow-providers-amazon = "*"
apache-airflow-providers-celery = "*"
apache-airflow-providers-postgres = "*"
apache-airflow-providers-redis = "*"
apache-airflow-providers-ssh = "*"
apache-airflow-providers-elasticsearch = "*"
data-detective-airflow = "2.1.0"
petl = "^1.7"
pandas = "^1.1, <1.6"
pydantic = "^1.10"
beautifulsoup4 = "^4.11"

[tool.poetry.dev-dependencies]
factory-boy = "*"
isort = {version = "*",extras = ["pyproject"]}
mypy = "0.790"
pycodestyle = "2.5.0"
pep8-naming = "*"
pylint = "2.5.2"
pytest = "*"
pytest-cov = "*"
pytest-deadfixtures = "*"
pytest-mock = "*"
responses = "*"
types-freezegun = "*"
types-pytz = "*"
types-PyYAML = "*"
types-paramiko = "*"
types-requests = "*"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.isort]
profile = "hug"
line_length = 120
src_paths = [
    "dags",
    "common",
]
multi_line_output = 4


[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
